js/js.translator/testData/incremental/invalidation/constVals/lib1/l1.3.kt
private const konst BAR = 2

const konst FOO = 1 + BAR
